@@ -2,6 +2,7 @@
 - Added Redhat 7.5 services to default service ignore list.
 - Updated ruby version to 2.4.4
 - Updated Gemfile to ask for puppet 5
+- Update badges and contribution guide URL in README.md
 
 * Mon Sep 10 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 3.3.0-0
 - Update Hiera 4 to Hiera 5
